# bookr

./: FRONTEND.md  README.md  package-lock.json  package.json
addr_to_geo/: .env.example  README.md  index.js  package-lock.json  package.json
frontend/: README.md  index.html  package-lock.json  package.json  postcss.config.cjs  rollup.config.js  tailwind.config.cjs
frontend/src/: App.svelte  api.ts  app.html  app.postcss  constants.ts  functions.ts  store.js  store.ts  types.ts
frontend/src/components/: About.svelte  AuthModal.svelte  ContactDetails.svelte  ContactModal.svelte  ContactPopup.svelte  FilterContainer.svelte  Map.svelte  MapContainer.svelte  MediaQuery.svelte  Menu.svelte  PasswordReset.svelte  PendingContact.svelte  Reviews.svelte  Star.svelte  StarRating.svelte  map.svelte
frontend/src/components/auth/: AuthModal.svelte  PasswordReset.svelte
frontend/src/components/contact/: AddContactForm.svelte  ContactAddress.svelte  ContactCapacity.svelte  ContactDetails.svelte  ContactGenres.svelte  ContactLinks.svelte  ContactName.svelte  PendingContact.svelte  SelectedContact.svelte  UserContact.svelte
frontend/src/components/map/: ContactPopup.svelte  Map.svelte  MapContainer.svelte
frontend/src/components/navigation/: AdminSidebar.svelte  Menu.svelte  UserSidebar.svelte  sidebar.ts
frontend/src/components/review/: AdminDisplayReview.svelte  ContactReview.svelte  EditReview.svelte  Review.svelte  Reviews.svelte  UserDisplayReview.svelte
frontend/src/components/ui/: ErrorMessage.svelte  Star.svelte  StarRating.svelte  (+2 more)
frontend/src/routes/: +layout.svelte  +page.svelte
server/: .env.example  .gitignore  Cargo.toml  README.md  configuration.yml.example  docker-compose.yml.example
server/configuration/: base.yaml  local.yaml  local.yaml.example  production.yaml
server/migrations/: 100_import.sql  1_contacts.sql  2_genres.sql  3_contacts_genres.sql  4_users.sql  5_user_confirmation.sql  6_contact_updates.sql  7_password_reset_table.sql  8_reviews.sql  9_contact_type.sql  9_users_reviews.sql
server/scripts/: init_db.sh
server/src/: configuration.rs  email_client.rs  error.rs  gmaps_api_client.rs  lib.rs  main.rs  redis_cli.rs  routes.rs  schema.rs  session_state.rs  setup.rs  startup.rs  telemetry.rs  types.rs  utils.rs
server/src/_entities/: genres.rs  mod.rs
server/src/auth/: middleware.rs  mod.rs  password.rs
server/src/domain/: contact.rs  genre.rs  input_validator.rs  mod.rs  review.rs  user.rs  user_email.rs
server/src/entities/: contacts.rs  contacts_genres.rs  prelude.rs
server/src/routes/: confirmation.rs  contacts.rs  genres.rs  geo_json.rs  login.rs  mod.rs  reset_password.rs  reviews.rs  sign_up.rs
server/src/routes/admin/: mod.rs  pending_contacts.rs  reviews.rs  users.rs
server/src/routes/admin/contacts/: delete_contact.rs  edit_contact.rs  mod.rs  pending_contacts.rs
server/src/routes/auth/: confirmation.rs  login.rs  mod.rs  password.rs  signup.rs
server/src/routes/user/: add_contact.rs  contacts.rs  logout.rs  mod.rs  password.rs  reviews.rs
server/src/routes/user/contacts/: add_contact.rs  delete_contact.rs  edit_contact.rs  get_contacts.rs  mod.rs
server/src/routes/user/reviews/: add_review.rs  delete_review.rs  edit_review.rs  get_reviews.rs  mod.rs
server/tests/: health_check.rs  helpers.rs
server/tests/api/: change_password.rs  confirmation.rs  contacts.rs  genres.rs  health_check.rs  helpers.rs  login.rs  main.rs  pending_contacts.rs  reset_password.rs  reviews.rs  sign_up.rs
server/tests/api/auth/: mod.rs  reset_password.rs
server/tests/api/contacts/: create_contacts.rs  delete_contacts.rs  edit_contacts.rs  get_contacts.rs  mod.rs  pending_contacts.rs
server/tests/api/reviews/: create_reviews.rs  delete_reviews.rs  edit_reviews.rs  get_reviews.rs  mod.rs
(+14 files in other folders)
