[package]
name = "byot_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "byot_server"

[dependencies]
actix-cors = "0.6.4"
actix-web = {version = "4.3", default-features = false, features = ["macros"]}
async-graphql = { version = "5.0", features = ["chrono", "dataloader", "tracing"] }
async-graphql-actix-web = "5.0" 
chrono = "0.4.23"
config = "0.13"
futures = "0.3.21"
sea-orm = { version = "^0.9.0", features = [ 
    "sqlx-postgres", 
    "runtime-async-std-native-tls", 
    "macros",
    "with-chrono"
] }
sea-orm-migration = "^0.9.0"
secrecy = { version = "0.8", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"