[package]
name = "byot_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "byot_server"

[dependencies]
actix-cors = "0.6.4"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web = {version = "4.3", default-features = false, features = ["macros"]}
actix-web-lab = "0.18"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
config = "0.13"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "cookies",
    "json", 
    "rustls-tls"
]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
linkify = "0.9"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"